myProject/force-app/main/default/objects/LinkedIN_Post__e/LinkedIN_Post__e.object-meta.xml
<CustomObject>
    <label>LinkedIN Post</label>
    <pluralLabel>LinkedIN Posts</pluralLabel>
</CustomObject>