myProject/force-app/main/default/objects/LinkedIN_Post__e/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <label>Author</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>