myProject/force-app/main/default/objects/LinkedIN_Post__e/fields/Post__c.field-meta.xml
<CustomField>
    <fullName>Post__c</fullName>
    <label>Post</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>