myProject/force-app/main/default/objects/LinkedIN_Post__e/fields/Post_Date__c.field-meta.xml
<CustomField>
    <fullName>Post_Date__c</fullName>
    <label>Post Date</label>
    <type>DateTime</type>
</CustomField>